# native-screenshot-tool

./: .gitignore  CMakeLists.txt  README.md
include/app/: App.h
include/capture/: AutoSaveService.h  BitmapFileWriter.h  CapturedImage.h  DesktopSnapshot.h  ImageClipboardWriter.h  ImageFileFormat.h  ImageFileWriter.h  ScreenCaptureService.h  WindowCaptureService.h  WindowInfo.h  WindowLocator.h
include/common/: Direct2D.h  DpiAwareness.h  GdiResources.h  RectUtils.h  Result.h  Win32Error.h
include/editing/: ImageMarkupService.h  MarkupCommand.h
include/hotkey/: HotkeyDefinition.h  HotkeyManager.h
include/settings/: AppSettings.h  SettingsRepository.h
include/ui/: MainWindow.h  OverlayPrimitives.h  RegionSelectionBuffers.h  RegionSelectionOverlay.h  RegionSelectionRenderer.h  SelectionEditToolbar.h  SelectionSession.h  TrayIconController.h  WindowSelectionOverlay.h
src/: main.cpp
src/app/: App.cpp
src/capture/: AutoSaveService.cpp  BitmapFileWriter.cpp  CapturedImage.cpp  ImageClipboardWriter.cpp  ImageFileWriter.cpp  ScreenCaptureService.cpp  WindowCaptureService.cpp  WindowLocator.cpp
src/common/: Direct2D.cpp  DpiAwareness.cpp  RectUtils.cpp  Win32Error.cpp
src/editing/: ImageMarkupService.cpp
src/hotkey/: HotkeyDefinition.cpp  HotkeyManager.cpp
src/settings/: SettingsRepository.cpp
src/ui/: MainWindow.cpp  OverlayPrimitives.cpp  RegionSelectionBuffers.cpp  RegionSelectionOverlay.Geometry.cpp  RegionSelectionOverlay.Input.cpp  RegionSelectionOverlay.cpp  RegionSelectionRenderer.cpp  SelectionEditToolbar.cpp  SelectionSession.cpp  TrayIconController.cpp  WindowSelectionOverlay.cpp
